# learnd3d12forrust

./: Cargo.toml  build.rs
src/: BasicPixelShader.hlsl  BasicVertexShader.hlsl  main.rs
